@@ -1,3 +1,7 @@
+2011-02-21  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed bug #17670: Remove deprecated functions scheduled for removal in 4.6
+
 2011-01-26  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Fixed bug #17327: Alter table in install tool does not work
